# SPDX-FileCopyrightText: 2026 fprintd (pure-Rust) contributors
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fprint-bozorth3"
description = "Pure-Rust BOZORTH3 minutiae matcher: a faithful, dependency-free port of NIST NBIS's public-domain fingerprint matching algorithm, score-exact against the stock C tool."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# The workspace license, like every other crate here. This code is our ORIGINAL work written from
# the stock NBIS spec, so it is ours to license; NBIS's own public-domain status (17 USC §105) is a
# fact about NIST's code, not ours, and public domain imposes no obligation to quarantine against.
# The NBIS lineage is recorded as provenance, not as a licence — see ARCHITECTURE.md §Provenance.
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/fprint-bozorth3"
keywords = ["fingerprint", "biometrics", "bozorth3", "nbis", "matcher"]
categories = ["algorithms", "science"]
# These integration tests use the `publish = false` fprint-testkit dev-dep, which goes version-less
# in the packaged manifest, so an unpacked tarball cannot compile them. Kept out of the tarball;
# they run in-tree.
exclude = [
  "tests/totality.rs",   # fprint-testkit (gen/Lcg totality sweep)
  "tests/properties.rs", # fprint-testkit (gen/ByteSource/Lcg property sweep)
]
# The golden corpus under tests/fixtures ships with the crate on purpose: score-exactness against the
# stock C tool is this crate's promise, and the reference data lets downstream reproduce it. It is
# well under the crates.io size limit, so it is not excluded.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--generate-link-to-definition",
  "--html-in-header",
  "katex-header.html",
]

[features]
# Off by default. Exposes the stage-level diagnostic entry point `debug_pipeline` — the compatibility
# table sizes `tests/golden.rs` checks against the stock C triple to localize a divergence to a stage.
# Not part of the stable API; `match_score` needs none of it.
unstable-diagnostics = []

[dependencies]
# Zero dependencies, on purpose: this is a self-contained arithmetic kernel. It does NOT depend on
# fprint-core — its input is the xyt (x, y, theta) triple, an interoperability fact, so it defines its
# own `Minutia`. The consumer (fprint-backend-native) owns the fprint_core::Minutia -> Minutia
# conversion. That keeps the kernel usable by anyone with minutiae, with no coupling to this
# project's domain model.

[lints]
workspace = true

[dev-dependencies]
# Deterministic xyt generation for the property and totality suites. Version-less so `cargo publish`
# strips it: `fprint-testkit` is `publish = false`, and `cargo xtask publish-check` proves it is
# absent from this crate's packaged manifest.
fprint-testkit = { workspace = true }
