[package]
name = "fprint-core"
description = "Modern, GObject-free Rust core for fingerprint readers: device/print domain model and backend traits, shared by a libfprint (FFI) shim backend and native Rust drivers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["fingerprint", "biometrics", "fprintd", "libfprint", "async"]
categories = ["authentication", "hardware-support"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
# Intentionally dependency-free for now: this crate is the pure domain model + traits.
# Serialization (FP3/GVariant via zvariant), async runtime glue, and USB transport live
# in downstream crates so fprint-core stays embeddable and platform-agnostic.

[lints]
workspace = true
