[package]
name = "fprint-fp3"
description = "FP3 fingerprint-template (de)serialization: fprintd/libfprint's \"FP3\" GVariant on-disk format <-> fprint-core's Print domain model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["fingerprint", "fprintd", "gvariant", "fp3", "serialization"]
categories = ["encoding", "parser-implementations"]
# These integration tests use `publish = false` dev-deps that go version-less in the packaged
# manifest, so an unpacked tarball cannot compile them. Kept out of the tarball; they run in-tree.
exclude = [
  "tests/property.rs",  # fprint-testkit (Lcg/xyt generators)
  "tests/malformed.rs", # fprint-testkit (ByteSource/Lcg mutation harness)
  "tests/roundtrip.rs", # fprint-backend-native (VirtualDevice enroll round-trip)
]

[dependencies]
# The GVariant framing is hand-rolled in `src/gvariant.rs`; this crate is a self-contained
# edge crystal over `fprint-core` alone (plus std). No serialization library, no derives.
fprint-core = { workspace = true }
# `Display`/`Error` for `Fp3Error`. fp3 sits outside the zero-dependency charter, so a leaf
# derive crate is fair game.
thiserror = "2"

[dev-dependencies]
# The end-to-end enroll -> FP3 -> verify round-trip test lives here (this crate sits
# above the domain model, so it may know a backend for testing; the backend stays
# unaware of any wire format — ARCHITECTURE.md principle 3).
fprint-backend-native = { workspace = true }
# The nbis-match seam test drives the real BOZORTH3 matcher through the pipeline's `nbis_match_score`,
# proving a Print(Nbis) survives FP3 and still scores as a match.
fprint-pipeline = { workspace = true }
# `Lcg` drives the property sweep and the malformed-blob mutation harness. Version-less so
# `cargo publish` strips it: `fprint-testkit` is `publish = false`, and `cargo xtask publish-check`
# proves it is absent from this crate's packaged manifest.
fprint-testkit = { workspace = true }
# A mature, independent GVariant implementation, used only by `tests/zvariant_oracle.rs` to
# re-decode the frozen golden fixtures and vouch that the hand-rolled codec reads the same
# structure. Dev-only: the shipped codec stays hand-rolled and this never enters the tarball.
zvariant = { version = "5", features = ["gvariant"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
