[package]
name = "fprintd"
description = "Pure-Rust fingerprint daemon speaking the net.reactivated.Fprint D-Bus contract (fprintd-compatible)."
version.workspace = true
edition.workspace = true
# Inherited from the shim, not chosen: on Linux the daemon drives fprint-backend-libfprint and
# therefore the `edition = "2024"` FFI stack, which needs 1.85.
rust-version = "1.85"
license.workspace = true
repository.workspace = true
authors.workspace = true
# Not published: a system daemon is delivered by distro packaging (systemd units, D-Bus policy,
# PolicyKit actions), the way upstream fprintd is. The library layer below is what crates.io is
# for.
publish = false

[[bin]]
name = "fprintd"
path = "src/main.rs"

# All real dependencies are Linux-only: the daemon talks to the system D-Bus,
# PolicyKit and logind, and drives the libfprint shim. Gating them here keeps the
# Windows workspace lean — on non-Linux the crate compiles down to a stub `main`.
[target.'cfg(target_os = "linux")'.dependencies]
fprint-core = { workspace = true }
fprint-fp3 = { workspace = true }
fprint-backend-libfprint = { workspace = true }
# zbus must use its tokio integration so interface handlers run in the tokio runtime the
# daemon is built on (the verify/enroll pumps `tokio::spawn` from inside handlers).
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "signal",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# `StreamExt`, to drain the NameOwnerChanged stream a claim watches. zbus already resolves
# futures-util, and its SignalStream is a bare `futures_core::Stream` with no inherent `next()`;
# naming it here adds nothing to the graph and keeps the watcher readable.
futures-util = { version = "0.3", default-features = false }

[target.'cfg(target_os = "linux")'.dev-dependencies]
fprint-backend-native = { workspace = true }

[lints]
workspace = true
